<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfondo"
    tools:context=".ui.fragments.login.LoginAFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="118dp"
            android:layout_height="111dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/logo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />

        <TextView
            android:id="@+id/titulo"
            style="@style/styleTitulo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit_bold"
            android:gravity="center"
            android:layout_marginTop="27dp"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/etxt_user"
            style="@style/EditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="20dp"
            android:layout_marginTop="27dp"
            android:drawableLeft="@drawable/ic_person_24px"
            android:hint="   E-mail"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/etxt_password"
            style="@style/EditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/password_24"
            android:hint="   Contraseña"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/etxt_user"
            tools:layout_editor_absoluteX="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                style="@style/ButtonBase"
                android:layout_width="200dp"
                android:layout_height="62dp"
                android:fontFamily="@font/kanit_bold"
                android:text="@string/botonIngresar"
                android:textStyle="bold"
                android:textSize="16sp"
                app:icon="@drawable/login_24px"
                app:iconGravity="end"
                app:iconTint="@color/white" />

               </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/olvidoPassword"
                style="@style/styleTexto"
                android:layout_width="181dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/sinCuenta"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_register"
                style="@style/ButtonBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/my_primary"
                android:fontFamily="@font/kanit_bold"
                android:text="@string/registrese"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
    <include
        android:id="@+id/lytLoading"
        layout="@layout/loading_layout"
        android:visibility="gone" />
</RelativeLayout>